test/fail/BadConstraint.ma
-- 2013-03-30 constraints must follow quantifier
fun f : [A : Set] -> [i : Size] -> (|i| < |i| -> A) -> A {}
